# tw-stock-compass

./: .gitignore  AGENTS.md  pyproject.toml
compass/: __init__.py  main.py
compass/auxiliary/: __init__.py  allocation.py  catalyst.py  exit_signals.py
compass/core/: __init__.py  dimensions.py  safety_zone.py  target_pe.py
compass/data/: __init__.py  cache.py  mops_api.py  twse_api.py
compass/industry/: __init__.py  deterioration.py  scoring.py
compass/risk/: __init__.py  dashboard.py
compass/ui/: __init__.py  app.py  utils.py
compass/ui/pages/: __init__.py  allocation.py  catalyst.py  comparison.py  home.py  industry_analysis.py  review.py  settings.py  stock_analysis.py
tests/: test_dimensions.py  test_target_pe.py
規格書/: 2025_content.txt  2026_content.txt  UI_Wireframe.md  台股價值投資分析系統規格書.md
