[project]
name = "tw-stock-compass"
version = "0.1.0"
description = "台股價值投資分析系統 — 基於阿勳投資方法論的本機桌面分析工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.25.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["compass*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
